--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mssql",
   "version": "1.0.0",
   "description": "mssql node",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -16,7 +16,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
