--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ DATABASE = 'dev.shatechno'
 USER = 'dev.shatechno'
 PASSWORD = '7!jYo787n'
 DRIVER = 'msnodesqlv8'
+
+
+CLOUD_NAME = 'dazu9xk1t'
+CLOUD_KEY ='349657169983752'
+CLOUD_SECRET_KEY='oRPTnY09uZvwiCMf6brhzdriBVc'
